--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <HTML>
 <HEAD> <TITLE>Activity - Insert animated GIF to HTML</TITLE> </HEAD>
 <BODY>
-  <img src="https://media.giphy.com/media/OkJat1YNdoD3W/giphy.gif" alt="this slowpoke moves"  width="250" alt="404 image"/>
+  <img src="https://media.giphy.com/media/OkJat1YNdoD3W/giphy.gif" alt="this slowpoke moves"  width="600" alt="welcomee"/>
 </BODY>
 </HTML>
