--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <HEAD> <TITLE>Activity - Insert animated GIF to HTML</TITLE> </HEAD>
 <BODY>
   <img src="https://media.giphy.com/media/OkJat1YNdoD3W/giphy.gif" alt="this slowpoke moves"  width="600" alt="welcomee"/>
-  <h1><strong><i> * Arun * </i></strong></h1>
+  <center><h1><strong><i> ARUN | アルン </i></strong><h1><center>
 </BODY>
 </HTML>
