--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <HTML>
-<HEAD> <TITLE>Activity - Insert animated GIF to HTML</TITLE> </HEAD>
+<HEAD> <TITLE> hey </TITLE> </HEAD>
 <BODY>
   <img src="https://media.giphy.com/media/OkJat1YNdoD3W/giphy.gif" alt="this slowpoke moves"  width="600" alt="welcomee"/>
   <center><h1><strong><i> ARUN | アルン </i></strong><h1><center>
